fastcharge: initial bringup of fastchg for tomato
Signed-off-by: AudioGod <audiogod@sonic-developers.com>

--- a/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
@@ -3180,6 +3180,7 @@ CONFIG_INTELLI_PLUG=y
 CONFIG_ZEN_DECISION=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_MSM_SLEEPER=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Yulong board selection
