--- a/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
@@ -417,9 +417,9 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+#CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
-CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+#CONFIG_CPU_FREQ_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
