--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@ modules.builtin
 *.lzo
 *.patch
 *.gcno
-
+build_tomato.sh
+dtbToolCM
+build_lettuce
+build.sh
 #
 # Top-level generic files
 #
@@ -44,7 +47,8 @@ modules.builtin
 /System.map
 /Module.markers
 /Module.symvers
-
+/modules_tomato
+/output_tomato
 #
 # Debian directory (make deb-pkg)
 #
