--- a/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
@@ -426,6 +426,7 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
