msm: Add MSM Limiter driver msm8916
* msm8916 features synchronous CPUs which means all
  cores follow single policy.
* Limiter driver 3.7 has three new attributes resume_max_freq,
  suspend_min_freq and scaling_governor which will set parameters
  for all the cores.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: AudioGod <audiogod@sonic-developers.com>

--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -87,4 +87,5 @@ obj-$(CONFIG_ZEN_DECISION) += msm_zen_decision.o
 obj-$(CONFIG_ASMP)		+= autosmp.o
 obj-$(CONFIG_BRICKED_HOTPLUG) += bricked_hotplug.o
 obj-$(CONFIG_STATE_NOTIFIER)		+= state_notifier.o
+obj-$(CONFIG_MSM_LIMITER) += msm_limiter.o
 obj-$(CONFIG_MSM_HOTPLUG) += msm_hotplug.o
