--- a/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
@@ -236,9 +236,13 @@ CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -380,8 +384,11 @@ CONFIG_PM_DEBUG=y
 CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
+# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
+CONFIG_QUICK_WAKEUP=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -485,8 +492,25 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_BIC is not set
 CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+CONFIG_TCP_CONG_VEGAS=y
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+CONFIG_TCP_CONG_VENO=y
+# CONFIG_TCP_CONG_YEAH is not set
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_CUBIC=y
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -3088,6 +3112,7 @@ CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
@@ -3325,8 +3350,10 @@ CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_CORE_CTL_HELPER=y
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+CONFIG_MSM_PERFORMANCE is not set
+CONFIG_STATE_NOTIFIER=y
+CONFIG_MSM_LIMITER=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_ASMP=y
 CONFIG_INTELLI_PLUG=y
