--- a/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_lettuce-64_defconfig
@@ -33,8 +33,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cyanogenmod"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-Gods-Kernel-MR1"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -234,9 +234,15 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -321,12 +327,14 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
-# CONFIG_FRONTSWAP is not set
+CONFIG_FRONTSWAP=y
+CONFIG_ZSWAP=y
+CONFIG_VNSWAP=y
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -366,6 +374,7 @@ CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
+CONFIG_POWERSUSPEND=y
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
@@ -376,7 +385,10 @@ CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # CONFIG_SUSPEND_TIME is not set
+# CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
+CONFIG_QUICK_WAKEUP=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -403,7 +415,18 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+#CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+#CONFIG_CPU_FREQ_GOV_ZZMOOVE is not set
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
@@ -469,8 +492,25 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_BIC is not set
 CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+CONFIG_TCP_CONG_VEGAS=y
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+CONFIG_TCP_CONG_VENO=y
+# CONFIG_TCP_CONG_YEAH is not set
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_CUBIC=y
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -1552,6 +1592,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
@@ -2298,6 +2339,7 @@ CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
+CONFIG_ADRENO_IDLER=y
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -2407,6 +2449,7 @@ CONFIG_FB_MSM_LVDS_CHIMEI_WXGA_PANEL=y
 # CONFIG_FB_MSM_QPIC_ILI_QVGA_PANEL is not set
 # CONFIG_FB_MSM_QPIC_PANEL_DETECT is not set
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_MSM_MDSS_HDMI_PANEL is not set
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
@@ -3169,6 +3212,13 @@ CONFIG_HAVE_CLK_PREPARE=y
 # CONFIG_MSM_CLK_CONTROLLER_V2 is not set
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_HWSPINLOCK=y
+CONFIG_BRICKED_HOTPLUG=y
+CONFIG_ASMP=y 
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_INTELLI_PLUG=y
+CONFIG_ZEN_DECISION=y
+CONFIG_MAKO_HOTPLUG=y
+CONFIG_MSM_SLEEPER=y
 
 #
 # Hardware Spinlock drivers
@@ -3306,8 +3356,10 @@ CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_CORE_CTL_HELPER=y
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+CONFIG_MSM_PERFORMANCE is not set
+CONFIG_STATE_NOTIFIER=y
+CONFIG_MSM_LIMITER=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
@@ -3331,8 +3383,16 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_CHECK_FS=y
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
@@ -3374,7 +3434,9 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set 
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
