--- a/arch/arm/boot/dts/qcom/msm8939-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-pm.dtsi
@@ -236,7 +236,7 @@
 		qcom,saw2-pmic-data0 = <0x07030011>;
 		qcom,saw2-pmic-data1 = <0x00030010>;
                 qcom,saw2-spm-cmd-ret = [00 03 00 0f];
-                qcom,saw2-spm-cmd-pc = [00 60 50 11 07 70 7B 01 50
+                qcom,saw2-spm-cmd-pc = [00 60 50 11 07 70 01 50
                                 02 62 72 0f];
 	};
 
@@ -420,7 +420,8 @@
 
 	qcom,lpm-workarounds {
 		compatible = "qcom,lpm-workarounds";
-		qcom,lpm-wa-skip-l2-spm;
+		lpm-cx-supply = <&pm8916_s2_corner>;
+		qcom,lpm-wa-cx-turbo-unvote;
 	};
 
 	qcom,mpm@601d0 {
