--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -655,6 +655,12 @@ config MSM_HOTPLUG
 	help
 	  The MSM hotplug driver controls on-/offlining of additional cores based
 	  on current cpu load.
+	  
+config ALUCARD_HOTPLUG
+	bool "Enable alucard-hotplug cpu hotplug driver"
+ 	default n
+ 	help
+	Generic Alucard-hotplug cpu hotplug driver for ARM SOCs
 
 source "drivers/soc/qcom/memshare/Kconfig"
 
