GK Tomato defconfig: Enable Kexec HardBoot & Charger controll
Signed-off-by: AudioGod <audiogod@sungsonic.co>

--- a/arch/arm64/configs/gk_tomato_defconfig
+++ b/arch/arm64/configs/gk_tomato_defconfig
@@ -187,6 +187,8 @@ CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_UID_CPUTIME=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
 # CONFIG_CC_STACKPROTECTOR is not set
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
@@ -1901,6 +1903,7 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_MSM_BCL_CTL is not set
 CONFIG_YL_PM8916_VBUS=y
 CONFIG_YL_BQ24157_CHARGER=y
+CONFIG_THUNDERCHARGE_CONTROL=y
 # CONFIG_CHARGE_CONFIG_MICROMAX is not set
 CONFIG_YL_FAN5405_CHARGER=y
 CONFIG_YL_LC709203_FUELGAUGE=y
