--- a/arch/arm64/configs/gk_tomato_defconfig
+++ b/arch/arm64/configs/gk_tomato_defconfig
@@ -2528,7 +2528,7 @@ CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 CONFIG_SND_SOC_QDSP6V2=y
 # CONFIG_AUDIO_OCMEM is not set
 CONFIG_DOLBY_DAP=y
-# CONFIG_DTS_EAGLE is not set
+CONFIG_DTS_EAGLE=y
 CONFIG_DOLBY_DS2=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
